Spacing fixes, updated comments, removed !defaults

--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -1,27 +1,27 @@
 /**
  * $MIXINS
- * ==========================================================================
- * A handful of some very vital and helpful mixins for Vitamin CSS.
+ * =============================================================================
+ * The Vitamin CSS Mixins Library.
  */
 
 /**
  * Clearfix
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin clearfix() {
-  &:before,
-  &:after {
-    content: " "; // 1
-    display: table; // 2
-  }
-  &:after {
-    clear: both;
-  }
+    &:before,
+    &:after {
+        content: " "; // 1
+        display: table; // 2
+    }
+    &:after {
+        clear: both;
+    }
 }
 
 /**
  * Font Size
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin font-size($font-size, $line-height:true) {
     font-size:$font-size;
@@ -33,7 +33,7 @@
 
 /**
  * Headings
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin headings($from: 1, $to: 6) {
     %base-heading {
@@ -50,7 +50,7 @@
 
 /**
  * Unstyled Lists
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin list-reset($margin-bottom:false) {
     list-style: none;
@@ -62,19 +62,19 @@
 
 /**
  * Vendor Prefixer
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin vendor($property, $value...) {
     -webkit-#{$property}:$value;
-       -moz-#{$property}:$value;
-        -ms-#{$property}:$value;
-         -o-#{$property}:$value;
-            #{$property}:$value;
+    -moz-#{$property}:$value;
+    -ms-#{$property}:$value;
+    -o-#{$property}:$value;
+    #{$property}:$value;
 }
 
 /**
  * Animation Prefixer
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin keyframe($animation-name) {
     @-webkit-keyframes $animation-name {
@@ -100,7 +100,7 @@
 
 /**
  * Animation Prefixer
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
  @mixin inverse-content {
     color: #fff;
@@ -119,7 +119,7 @@
 
  /**
  * Placeholder
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin placeholder($color) {
     &::-moz-placeholder           { color: $color; opacity: 1; }
@@ -129,7 +129,7 @@
 
  /**
  * Media Query
- * --------------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  */
 @mixin media-query($media-query){
     @if $media-query == palm {
