--- a/utilities/_grid.scss
+++ b/utilities/_grid.scss
@@ -5,48 +5,49 @@
 
 .container {
     box-sizing: content-box;
-	max-width: $container-width;
+	max-width: $container-width-default;
 	margin: 0 auto;
     padding: 0 $spacing-unit-base;
 
+    /* Wider Container Elements */
     &.container--wide {
         max-width: $container-width-wide;
     }
 
+    /* Skinnier Container Elements */
     &.container--skinny {
         max-width: $container-width-skinny;
     }
 }
 
-.grid {
-    display: block;
-    margin: 0 auto;
-    font-size: 0;
-    margin-left: -$spacing-unit-base;
-
     .grid {
-    	padding: 0;
-    }
+        display: block;
+        margin: 0 auto;
+        font-size: 0;
+        margin-left: -$spacing-unit-base;
 
-    &.grid--gutterless {
-        padding-left: 10px;
-        margin-left: 0;
+        /* Nested Grids */
+        .grid {
+        	padding: 0;
+        }
 
+        /* Grid Items */
         .grid__item {
-            padding: 0;
+            display: inline-block;
+            font-size: 1rem;
+            margin: 0;
+            padding-left: $spacing-unit-base;
+            text-align: left;
+            vertical-align: top;
+        }
+
+        /* Gutterless Grid */
+        &.grid--gutterless {
+            padding-left: 10px;
+            margin-left: 0;
+
+            .grid__item {
+                padding: 0;
+            }
         }
     }
-}
-.grid--block {
-    margin-bottom: $spacing-unit-base;
-    margin-bottom: ($spacing-unit-base / $font-size-base)*1rem;
-}
-
-.grid__item {
-    display: inline-block;
-    font-size: 1rem;
-    margin: 0;
-    padding-left: $spacing-unit-base;
-    text-align: left;
-    vertical-align: top;
-}
